# esp32

./: .clang-format  .clangd  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Cargo.toml  LICENSE  README.md  config.toml.example  configure.sh  diagram.json  sdkconfig.defaults  select_main.sh  wokwi-test.yaml  wokwi.toml
.cargo/: config.toml.example
.claude/: settings.local.json
.github/workflows/: ci.yml
.specs/: battery-capacity-tester.md  continuous-mode.md
.zed/: settings.json  tasks.json
chips/: ads1115.chip.c  ads1115.chip.json
components/helpers/: CMakeLists.txt
components/helpers/include/: helpers.h
components/helpers/src/: helpers.c
components/wifi_helper/: CMakeLists.txt
components/wifi_helper/include/: wifi_helper.h
components/wifi_helper/src/: wifi_helper.c
configs/: sdkconfig.debug  sdkconfig.matter  sdkconfig.production
docs/: print.css  print.sh  wiring-checklist.md
main/: CMakeLists.txt  idf_component.yml  main_matter_sensor.c  main_matter_sensor.cpp  main_sensor.c  main_test_blink.c  main_wifi.c  wifi_config.h.template
schematics/battery_manager/: battery_manager.kicad_pcb  battery_manager.kicad_prl  battery_manager.kicad_pro  battery_manager.kicad_sch
schematics/battery_manager/bom/: ibom.html
schematics/battery_tester/: battery_tester.kicad_pcb  battery_tester.kicad_prl  battery_tester.kicad_pro  battery_tester.kicad_sch
schematics/battery_tester/v1.0.0/: battery_tester-B_Cu.gbr  battery_tester-B_Mask.gbr  battery_tester-B_Silkscreen.gbr  battery_tester-Edge_Cuts.gbr  battery_tester-F_Cu.gbr  battery_tester-F_Mask.gbr  battery_tester-F_Silkscreen.gbr  battery_tester-NPTH.drl  battery_tester-PTH.drl  battery_tester-job.gbrjob
scripts/: flash.sh  monitor.sh  serial_monitor.py
src/: adc.rs  channel.rs  config.rs  led.rs  lib.rs  main.rs  notify.rs  serial.rs  wifi.rs
src/apps/: blink.rs  matter_light.rs  mod.rs  wifi_test.rs
src/common/: config.rs  init.rs  led.rs  mod.rs  wifi.rs
