[package]
name = "battery-tester"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
name = "firmware"
path = "src/lib.rs"

[[bin]]
name = "battery-tester"
path = "src/bin/battery_tester/main.rs"
harness = false

[[bin]]
name = "blink"
path = "src/bin/blink/main.rs"
harness = false

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

# WiFi firmware requires optimization to function correctly
[profile.dev.package.esp-radio]
opt-level = 3

[features]
default = ["esp32c3", "wifi"]
esp32c3 = [
    "esp-hal/esp32c3",
    "esp-println/esp32c3",
    "esp-backtrace/esp32c3",
    "esp-rtos/esp32c3",
    "esp-hal-smartled/esp32c3",
    "esp-bootloader-esp-idf/esp32c3",
    "esp-radio?/esp32c3",
]
wifi = ["dep:esp-radio", "dep:embassy-net", "dep:reqwless", "dep:esp-alloc", "esp-rtos/esp-radio"]

[dependencies]
# Core logging
log = { version = "0.4", default-features = false }
esp-println = { version = "0.16", default-features = false, features = ["uart", "log-04"] }
esp-backtrace = { version = "0.18", default-features = false, features = ["panic-handler", "println"] }

# ESP HAL + RTOS (Embassy integration)
esp-hal = { version = "1.0", default-features = false, features = ["unstable", "rt"] }
esp-rtos = { version = "0.2", default-features = false, features = ["embassy", "esp-alloc"] }
esp-bootloader-esp-idf = { version = "0.4", default-features = false }

# Embassy async runtime
embassy-executor = { version = "0.9", default-features = false }
embassy-time = { version = "0.5", default-features = false }
embassy-sync = { version = "0.7", default-features = false }

# ADS1115 ADC driver
ads1x1x = { version = "0.3", default-features = false }

# LED driver (SK6812/WS2812B via RMT)
esp-hal-smartled = { version = "0.17", default-features = false }
smart-leds = { version = "0.4", default-features = false }

# WiFi and networking (behind "wifi" feature)
esp-radio = { version = "0.17", default-features = false, features = ["wifi"], optional = true }
embassy-net = { version = "0.9", default-features = false, features = ["tcp", "udp", "dns", "dhcpv4"], optional = true }
reqwless = { version = "0.14", default-features = false, features = ["log"], optional = true }
esp-alloc = { version = "0.9", default-features = false, optional = true }

# no_std utilities
nb = "1.1"
heapless = { version = "0.8", default-features = false }
critical-section = "1.1"
static_cell = "2"
portable-atomic = { version = "1.6", default-features = false }
embedded-hal = { version = "1.0", default-features = false }
embedded-hal-bus = { version = "0.3", default-features = false }
